--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  box-sizing: border-box;
+}
+
 .every {
   display: flex;
   justify-content: center;
@@ -28,4 +32,16 @@ td {
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center center;
+}
+
+.machine-cell {
+  display: inline-block;
+  width: 150px;
+  height: 200px;
+  margin: 15px;
+  border: 3px solid black;
+  background-color:rgb(250, 250, 250);
+  font-size: 30px;
+  text-align: center;
+  line-height: 200px;
 }
