--- a/style.css
+++ b/style.css
@@ -1,13 +1,82 @@
-body {
+/* Reset CSS */
+
+* {
   box-sizing: border-box;
+  margin: 0;
 }
+
+body {
+  font-family: 'Press Start 2P', cursive;
+  background-color: black;
+  color: white;
+
+}
+
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
+
+button,
+input,
+textarea {
+  font-family: 'Press Start 2P', cursive;
+}
+
+button:focus,
+button:active,
+input:focus,
+input:active,
+textarea:focus,
+textarea:active {
+  outline: none;
+  box-shadow: none;
+}
+
+ul,
+ol,
+li {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+
 
 .every {
   display: flex;
   justify-content: center;
-  align-items: center;
+  margin-top: 20px;
   height: 100vh;
 }
+
+/* 메인페이지 */
+.link-button {
+  display: inline-block;
+  margin: 5px;
+  padding: 0 5px;
+  height: 40px;
+  line-height: 35px;
+  background-color: rgb(255, 170, 10);
+  border: 3px solid white;
+  text-align: center;
+}
+
+.link-button:hover {
+  background-color: rgb(255, 150, 0);
+  color: rgb(230, 230, 230);
+}
+
+.main-text {
+  text-align: center;
+  margin: 75px 0;
+  font-size: 40px;
+  text-shadow: 3px 3px 0px #2038ec;
+  line-height: 60px;
+}
+
+/* 두더지잡기 */
 
 td {
   border: 1px solid black;
@@ -34,14 +103,59 @@ td {
   background-position: center center;
 }
 
+/* 럭키세븐 */
+.machine {
+  margin: 30px 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.machine-cells {
+  display: flex;
+  justify-content: space-around;
+}
+
+.machine-button {
+  border-style: none;
+  margin: 50px;
+  color: blueviolet;
+  font-size: 20px;
+  text-align: center;
+  background: #000;
+  cursor: pointer;
+}
+
+.machine-button:hover {
+  color: rgb(175, 175, 175);
+}
+
 .machine-cell {
-  display: inline-block;
+  display: flex;
+  flex-direction: column;
   width: 150px;
   height: 200px;
   margin: 15px;
-  border: 3px solid black;
-  background-color:rgb(250, 250, 250);
-  font-size: 30px;
+  border: 3px solid white;
+  background-color:rgb(10, 10, 10);
   text-align: center;
-  line-height: 50px;
+  line-height: 40px;
+}
+.cell-top-bottom {
+
+  height: 50px;
+  font-size: 25px;
+  line-height: 40px;
+}
+
+.cell-center{
+  border-top: solid 2px white;
+  border-bottom: solid 2px white;
+  height: 100px;
+  line-height: 70px;
+  font-size: 50px;
+  cursor: pointer;
+}
+
+.cell-center:hover{
+  background-color: rgb(30,30,30);
 }
