--- a/style.css
+++ b/style.css
@@ -51,6 +51,20 @@ li {
   height: 100vh;
 }
 
+.start-button {
+  border-style: none;
+  margin: 30px;
+  color: blueviolet;
+  font-size: 20px;
+  text-align: center;
+  background: #000;
+  cursor: pointer;
+}
+
+.start-button:hover {
+  color: rgb(175, 175, 175);
+}
+
 /* 메인페이지 */
 .link-button {
   display: inline-block;
@@ -77,16 +91,56 @@ li {
 }
 
 /* 두더지잡기 */
+.catchmole {
+  margin: 30px 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.catchmole-form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.level-select{
+  width: 200px;
+  height: 35px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 18px;
+  line-height: 35px;
+}
+
+.level-select button{
+  border-style: none;
+  background-color: black;
+  font-size: 25px;
+  color: #ffffff;
+  cursor: pointer;
+}
+.level-select button:hover {
+  color: rgb(175, 175, 175);
+}
+
+
+table {
+  margin: 20px 0;
+}
 
 td {
-  border: 1px solid black;
-  width: 50px;
-  height: 50px;
+  border: 2px solid rgb(50, 50, 50);
+  width: 75px;
+  height: 75px;
   text-align: center;
 }
 
 .normal {
-  background-color: rgb(250, 250, 250);
+  background-color: black;
+}
+.mole:hover {
+  background-color: rgb(30, 30, 30);
 }
 
 .mole {
@@ -103,6 +157,8 @@ td {
   background-position: center center;
 }
 
+
+
 /* 럭키세븐 */
 .machine {
   margin: 30px 0;
@@ -115,19 +171,6 @@ td {
   justify-content: space-around;
 }
 
-.machine-button {
-  border-style: none;
-  margin: 50px;
-  color: blueviolet;
-  font-size: 20px;
-  text-align: center;
-  background: #000;
-  cursor: pointer;
-}
-
-.machine-button:hover {
-  color: rgb(175, 175, 175);
-}
 
 .machine-cell {
   display: flex;
