--- a/style.css
+++ b/style.css
@@ -150,14 +150,14 @@ td {
 }
 
 .mole {
-  background-image: url(./CatchMole/moleimg.png);
+  background-image: url(./src/CatchMole/moleimg.png);
   background-size: 130%;
   background-repeat: no-repeat;
   background-position: center center;
 }
 
 .closed {
-  background-image: url(./CatchMole/moledeadimg.png);
+  background-image: url(./src/CatchMole/moledeadimg.png);
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: center center;
